# apps/api/src/di/modules/accounts.ts
@@ -1,5 +1,7 @@
 import { CreateAccount } from "@repo/core/accounts/application/create-account";
+import { DeleteAccountUseCase } from "@repo/core/accounts/application/delete-account";
 import { SearchAccountsByUser } from "@repo/core/accounts/application/search-accounts-by-user";
+import { UpdateAccountUseCase } from "@repo/core/accounts/application/update-account";
 import { AccountRepository } from "@repo/core/accounts/domain/account-repository";
 import { FindAccount } from "@repo/core/accounts/domain/find-account";
 import { AccountRepositoryPostgres } from "@repo/core/accounts/infrastructure/account-repository.postgres";
@@ -23,5 +25,15 @@ export function register(builder: ContainerBuilder) {
   builder
     .register(SearchAccountsByUser)
     .use(SearchAccountsByUser)
+    .withDependencies([AccountRepository]);
+
+  builder
+    .register(UpdateAccountUseCase)
+    .use(UpdateAccountUseCase)
+    .withDependencies([AccountRepository]);
+
+  builder
+    .register(DeleteAccountUseCase)
+    .use(DeleteAccountUseCase)
     .withDependencies([AccountRepository]);
 }
